# OpenClawHAOSAddon-Rust

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCS.md  Dockerfile  INSTALL.md  MIGRATION.md  README.md  config.yaml  repository.yaml
.github/workflows/: build-ghcr.yml
crates/actiond/: Cargo.toml
crates/actiond/src/: main.rs
crates/addon-supervisor/: Cargo.toml
crates/addon-supervisor/src/: main.rs
crates/haos-ui/: Cargo.toml
crates/haos-ui/src/: gateway_ws.rs  main.rs
crates/ingressd/: Cargo.toml
crates/ingressd/src/: main.rs
crates/oc-config/src/: main.rs
docs/: AI_HANDOFF.md  AI_MAINTENANCE_CHECKLIST.md  ARCHITECTURE.md  DOCUMENT_PACKAGE_MANIFEST.md  HAOS_MAINTENANCE_RUNBOOK.md  MAINTAINER_CONTEXT.md  OPERATION_LOG.md  RELEASE_2026-05-20.md  RUNTIME_BOUNDARIES.md
docs/archives/: openclaw-haos-maintenance-docs-20260521-020110.filelist.txt  openclaw-haos-maintenance-docs-20260521-020236.filelist.txt
openclaw_assistant_rust/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml
openclaw_assistant_rust/crates/ingressd/src/: main.rs
openclaw_assistant_rust/translations/: en.yaml
translations/: en.yaml
