[workspace]
members = [
  "crates/addon-supervisor",
  "crates/haos-ui",
  "crates/ingressd",
  "crates/oc-config",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["SunBoss"]

[workspace.dependencies]
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
http = "1"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
ring = "0.17"
