[package]
name = "ingressd"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
axum-server = { version = "0.7", features = ["tls-rustls"] }
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
reqwest.workspace = true
rustls = { version = "0.23.37", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
portable-pty = "0.9"
